--- a/Cinema/src/Cinema/cat.properties
+++ b/Cinema/src/Cinema/cat.properties
@@ -1,6 +1,24 @@
-
-# Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-# Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
+ # The MIT License
+ #
+ # Copyright 2022 Santiago Arias.
+ #
+ # Permission is hereby granted, free of charge, to any person obtaining a copy
+ # of this software and associated documentation files (the "Software"), to deal
+ # in the Software without restriction, including without limitation the rights
+ # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ # copies of the Software, and to permit persons to whom the Software is
+ # furnished to do so, subject to the following conditions:
+ #
+ # The above copyright notice and this permission notice shall be included in
+ # all copies or substantial portions of the Software.
+ #
+ # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ # THE SOFTWARE.
 
 
 SELECT\ LANGUAGE=Canvia l'idioma
@@ -8,6 +26,7 @@ INSERT\ YOUR\ CREDIT\ CARD=Introdu\u00efu la vostra targeta de cr\u00e8dit
 THIS\ SERVICE\ IS\ TEMPORARILY\ DOWN=Aquest servei est\u00e0 temporalment desactivat
 LOW\ BALANCE\ OR\ CARD\ NOT\ FOUND=Saldo insuficient o no s'ha trobat la targeta
 YOU\ CAN\ SAFELY\ REMOVE\ YOUR\ CARD\ NOW=Ara pots treure la teva targeta amb seguretat
+REMOVE\ YOUR\ CARD=Traieu la vostra targeta
 SUCCESS!=\u00c8xit!
 TRY\ AGAIN=Torna-ho a provar
 CONNECTION\ INTERRUPTED=S'ha interromput la connexi\u00f3
@@ -30,3 +49,7 @@ PRICE\:\ =Preu:
 \ -\ SESSIONS=\ - Sessions
 MAIN\ MENU=Men\u00fa principal
 WHAT\ WOULD\ YOU\ LIKE\ TO\ DO?=Qu\u00e8 t'agradaria fer?
+ROW\:\ =Fila: 
+COL\:\ =Seient: 
+WELCOME=Benvingut/da a aquest ETC! \n\nAqu\u00ed trobar\u00e0s les millors pel\u00b7l\u00edcules seleccionades amb moltes sessions disponibles. Esperem que gaudiu la vostra visita! \n\nCompte! Si inseriu la targeta abans del pagament, perdreu tota la vostra selecci\u00f3!
+CARDTHREAT=El sistema s'empassar\u00e0 la targeta si no la retira
