--- a/Cinema/src/Cinema/en.properties
+++ b/Cinema/src/Cinema/en.properties
@@ -1,6 +1,24 @@
-
-# Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-# Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
+ # The MIT License
+ #
+ # Copyright 2022 Santiago Arias.
+ #
+ # Permission is hereby granted, free of charge, to any person obtaining a copy
+ # of this software and associated documentation files (the "Software"), to deal
+ # in the Software without restriction, including without limitation the rights
+ # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ # copies of the Software, and to permit persons to whom the Software is
+ # furnished to do so, subject to the following conditions:
+ #
+ # The above copyright notice and this permission notice shall be included in
+ # all copies or substantial portions of the Software.
+ #
+ # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ # THE SOFTWARE.
 
 
 SELECT\ LANGUAGE=Change language
@@ -8,6 +26,7 @@ INSERT\ YOUR\ CREDIT\ CARD=Insert your credit card
 THIS\ SERVICE\ IS\ TEMPORARILY\ DOWN=This service is temporarily down
 LOW\ BALANCE\ OR\ CARD\ NOT\ FOUND=Insufficient balance or card not found
 YOU\ CAN\ SAFELY\ REMOVE\ YOUR\ CARD\ NOW=You can safely remove your card now
+REMOVE\ YOUR\ CARD=Remove your card
 SUCCESS!=Success!
 TRY\ AGAIN=Try again
 CONNECTION\ INTERRUPTED=Connection interrupted
@@ -30,3 +49,7 @@ PRICE\:\ =Price:
 \ -\ SESSIONS=\ - Sessions
 MAIN\ MENU=Main menu
 WHAT\ WOULD\ YOU\ LIKE\ TO\ DO?=What would you like to do?
+ROW\:\ =Row: 
+COL\:\ =Seat: 
+WELCOME=Welcome to this ETC! \n\nHere you will find the best selected films with many sessions available. We hope you enjoy your visit! \n\nBeware! If you insert the card before the payment process, you will lose your current selection!
+CARDTHREAT=The system will keep the card if you do not remove it
