--- a/Cinema/src/Cinema/es.properties
+++ b/Cinema/src/Cinema/es.properties
@@ -1,6 +1,24 @@
-
-# Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-# Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
+ # The MIT License
+ #
+ # Copyright 2022 Santiago Arias.
+ #
+ # Permission is hereby granted, free of charge, to any person obtaining a copy
+ # of this software and associated documentation files (the "Software"), to deal
+ # in the Software without restriction, including without limitation the rights
+ # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ # copies of the Software, and to permit persons to whom the Software is
+ # furnished to do so, subject to the following conditions:
+ #
+ # The above copyright notice and this permission notice shall be included in
+ # all copies or substantial portions of the Software.
+ #
+ # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ # THE SOFTWARE.
 
 
 SELECT\ LANGUAGE=Cambiar idioma
@@ -8,6 +26,7 @@ INSERT\ YOUR\ CREDIT\ CARD=Introduzca su tarjeta de cr\u00e9dito
 THIS\ SERVICE\ IS\ TEMPORARILY\ DOWN=Servicio temporalmente fuera de servicio
 LOW\ BALANCE\ OR\ CARD\ NOT\ FOUND=Saldo insuficiente o tarjeta no introducida
 YOU\ CAN\ SAFELY\ REMOVE\ YOUR\ CARD\ NOW=Puede retirar su tarjeta
+REMOVE\ YOUR\ CARD=Retire su tarjeta
 SUCCESS!=\u00a1Pago realizado!
 TRY\ AGAIN=Intentar de nuevo
 CONNECTION\ INTERRUPTED=Conexi\u00f3n interrumpida
@@ -29,4 +48,8 @@ CANCEL=Cancelar
 PRICE\:\ =Precio: 
 \ -\ SESSIONS=\ - Sesiones
 MAIN\ MENU=Men\u00fa principal
-WHAT\ WOULD\ YOU\ LIKE\ TO\ DO?=\u00bfQu\u00e9 operaci\u00f3n desea realizar?
+WHAT\ WOULD\ YOU\ LIKE\ TO\ DO?=\u00bfQu\u00e9 quiere hacer?
+ROW\:\ =Fila: 
+COL\:\ =Asiento: 
+WELCOME=\u00a1Bienvenido/a/s a este ETC! \n\nAqu\u00ed encontrar\u00e1s las mejores pel\u00edculas seleccionadas con muchas sesiones disponibles. \u00a1Esperamos que disfrute su visita! \n\n\u00a1Cuidado! Si inserta la tarjeta antes del pago, \u00a1perder\u00e1 toda su selecci\u00f3n!
+CARDTHREAT=El sistema se tragar\u00e1 la tarjeta si no la retira
