--- a/Cinema/src/Cinema/eus.properties
+++ b/Cinema/src/Cinema/eus.properties
@@ -1,6 +1,24 @@
-
-# Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-# Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
+ # The MIT License
+ #
+ # Copyright 2022 Santiago Arias.
+ #
+ # Permission is hereby granted, free of charge, to any person obtaining a copy
+ # of this software and associated documentation files (the "Software"), to deal
+ # in the Software without restriction, including without limitation the rights
+ # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ # copies of the Software, and to permit persons to whom the Software is
+ # furnished to do so, subject to the following conditions:
+ #
+ # The above copyright notice and this permission notice shall be included in
+ # all copies or substantial portions of the Software.
+ #
+ # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ # THE SOFTWARE.
 
 
 SELECT\ LANGUAGE=Hizkuntza aldatu
@@ -8,6 +26,7 @@ INSERT\ YOUR\ CREDIT\ CARD=Sartu zure kreditu txartela
 THIS\ SERVICE\ IS\ TEMPORARILY\ DOWN=Zerbitzu hau aldi baterako eten da
 LOW\ BALANCE\ OR\ CARD\ NOT\ FOUND=Ez da nahikoa saldoa edo txartela aurkitu
 YOU\ CAN\ SAFELY\ REMOVE\ YOUR\ CARD\ NOW=Zure txartela segurtasunez kendu dezakezu orain
+REMOVE\ YOUR\ CARD=Kendu zure txartela
 SUCCESS!=Arrakasta!
 TRY\ AGAIN=Saiatu berriro
 CONNECTION\ INTERRUPTED=Konexioa eten da
@@ -30,3 +49,7 @@ PRICE\:\ =Prezioa:
 \ -\ SESSIONS=\ - Saioak
 MAIN\ MENU=Menu nagusia
 WHAT\ WOULD\ YOU\ LIKE\ TO\ DO?=Zer egin nahi duzu?
+ROW\:\ =Ilara: 
+COL\:\ =Eserlekua: 
+WELCOME=Ongi etorri ETC honetara! \n\nHemen aukeratutako film onenak aurkituko dituzu saio askorekin. Zure bisita gustatzea espero dugu! \n\nKontuz! Txartela ordainketa baino lehen sartzen baduzu, hautapen osoa galduko duzu!
+CARDTHREAT=Sistemak txartela irentsiko du ez baduzu kentzen
