--- a/Cinema/src/Cinema/cat.properties
+++ b/Cinema/src/Cinema/cat.properties
@@ -53,3 +53,4 @@ ROW\:\ =Fila:
 COL\:\ =Seient: 
 WELCOME=Benvingut/da a aquest ETC! \n\nAqu\u00ed trobar\u00e0s les millors pel\u00b7l\u00edcules seleccionades amb moltes sessions disponibles. Esperem que gaudiu la vostra visita! \n\nCompte! Si inseriu la targeta abans del pagament, perdreu tota la vostra selecci\u00f3!
 CARDTHREAT=El sistema s'empassar\u00e0 la targeta si no la retira
+CARDTHREAT2=El sistema s'empassar\u00e0 la targeta si no la retira. Totes les operacions realitzades han estat cancel\u00b7lades
