--- a/Cinema/src/Cinema/en.properties
+++ b/Cinema/src/Cinema/en.properties
@@ -53,3 +53,4 @@ ROW\:\ =Row:
 COL\:\ =Seat: 
 WELCOME=Welcome to this ETC! \n\nHere you will find the best selected films with many sessions available. We hope you enjoy your visit! \n\nBeware! If you insert the card before the payment process, you will lose your current selection!
 CARDTHREAT=The system will keep the card if you do not remove it
+CARDTHREAT2=The system will keep the card if you do not remove it. All ongoing operations are now cancelled.
