--- a/Cinema/src/Cinema/es.properties
+++ b/Cinema/src/Cinema/es.properties
@@ -53,3 +53,4 @@ ROW\:\ =Fila:
 COL\:\ =Asiento: 
 WELCOME=\u00a1Bienvenido/a/s a este ETC! \n\nAqu\u00ed encontrar\u00e1s las mejores pel\u00edculas seleccionadas con muchas sesiones disponibles. \u00a1Esperamos que disfrute su visita! \n\n\u00a1Cuidado! Si inserta la tarjeta antes del pago, \u00a1perder\u00e1 toda su selecci\u00f3n!
 CARDTHREAT=El sistema se tragar\u00e1 la tarjeta si no la retira
+CARDTHREAT2=El sistema se tragar\u00e1 la tarjeta si no la retira. Todas las operaciones realizadas han sido canceladas
