--- a/Cinema/src/Cinema/eus.properties
+++ b/Cinema/src/Cinema/eus.properties
@@ -53,3 +53,4 @@ ROW\:\ =Ilara:
 COL\:\ =Eserlekua: 
 WELCOME=Ongi etorri ETC honetara! \n\nHemen aukeratutako film onenak aurkituko dituzu saio askorekin. Zure bisita gustatzea espero dugu! \n\nKontuz! Txartela ordainketa baino lehen sartzen baduzu, hautapen osoa galduko duzu!
 CARDTHREAT=Sistemak txartela irentsiko du ez baduzu kentzen
+CARDTHREAT2=Txartela sistemak irentsiko du ez baduzu kentzen. Egindako eragiketa guztiak bertan behera utzi dira
